# lofarimaging

./: .gitignore  CONTRIBUTORS.txt  LICENSE  LOFAR LBA imaging tutorial v2.ipynb  LOFAR LBA imaging tutorial v3.ipynb  LOFAR LBA imaging tutorial v4.ipynb  LOFAR LBA imaging tutorial.ipynb  README.md  collect_from_opcua.py  hdf5_tools.ipynb  image_opcua.ipynb  lofarimaging.ipynb  pyproject.toml  requirements.txt  self_cal_demo.py  setup.py  stationrotations.txt  viewer.ipynb
.github/workflows/: pythonpackage.yml
lofarimaging/: __init__.py  hdf5util.py  lofarimager.py  lofarimaging.py  maputil.py  opc_interface.py  singlestationutil.py  version.py
test/: test_single_station.py
