[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt",
    "wheel",
]
build-backend = "hatchling.build"

[project]
name = "lofarimaging"
version = "1.5.0"
authors = [
  { name="Vanessa Moss", email="moss@astron.nl" },
  { name="Michiel Brentjens" },
  { name="Tammo Jan Dijkema" },
  { name="Maaijke Mevius" },
]
description = "LOFAR imaging utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/lofar-astron/lofarimaging"
Issues = "https://github.com/lofar-astron/lofarimaging/issues"


[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[tool.hatch.build.targets.wheel]
packages = ["lofarimaging/"]
